--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -19,7 +19,7 @@ ORG_DESCRIPTION="Volcanic Trading Group"
 ORG_KEYBASE="volcxyz"
 ORG_TWITTER="volcxyz"
 ORG_GITHUB="volcxyz"
-ORG_OFFICIAL_EMAIL="volc@sent.com"
+ORG_OFFICIAL_EMAIL="volcxyz@sent.com"
 
 
 [[CURRENCIES]]
@@ -27,6 +27,6 @@ code="VOLC"
 issuer="GADS43KNEAZ55Z5RQ6SK4WZRQS7QSMWIXBGFV4CPR4HM6XDU73F5NY53"
 display_decimals=2
 name="VOLC Coin"
-desc="here will only ever be 1,000,000,000 VOLC coin existence. We will distribute the bonus share weekly and monthly, check our blog for the schedule".
+desc="There will only ever be 1,000,000,000 VOLC coin existence. We will distribute the bonus share weekly and monthly, check our blog for the schedule".
 image="https://volc.xyz/.well-known/volc.png"
 fixed_number=1000000000
