--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -5,7 +5,7 @@ VERSION="2.0.0"
 [DOCUMENTATION]
 ORG_NAME="VOLC xyz"
 ORG_URL="https://volc.xyz"
-ORG_LOGO="https://volc.xyz/.well-known/volc.png"
+ORG_LOGO="https://volc.xyz/assets/favicon.png"
 ORG_DESCRIPTION="Volcanic Trading Group"
 ORG_KEYBASE="volcxyz"
 ORG_TWITTER="volcxyz"
@@ -14,10 +14,11 @@ ORG_OFFICIAL_EMAIL="volcxyz@sent.com"
 
 
 [[CURRENCIES]]
-code="VOLC"
-issuer="GADS43KNEAZ55Z5RQ6SK4WZRQS7QSMWIXBGFV4CPR4HM6XDU73F5NY53"
-display_decimals=2
-name="VOLC Coin"
-desc="There will only ever be 1,000,000,000 VOLC coin existence. We will distribute the bonus share weekly and monthly, check our blog for the schedule".
-image="https://volc.xyz/.well-known/volc.png"
+code= "VOLC"
+name= "VOLC Coin"
+issuer= "GADS43KNEAZ55Z5RQ6SK4WZRQS7QSMWIXBGFV4CPR4HM6XDU73F5NY53"
+is_asset_anchored = false
+display_decimals= 7
+desc= "There will only ever be 1,000,000,000 VOLC coin existence. We will distribute the bonus share weekly and monthly, check our blog for the schedule".
+image= "https://volc.xyz/assets/favicon.png"
 fixed_number=1000000000
