--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -1,10 +1,24 @@
 NETWORK_PASSPHRASE="Public Global Stellar Network ; September 2015"
+FEDERATION_SERVER="https://api.domain.com/federation"
+AUTH_SERVER="https://api.domain.com/auth"
+TRANSFER_SERVER="https://api.domain.com"
+SIGNING_KEY="GBBHQ7H4V6RRORKYLHTCAWP6MOHNORRFJSDPXDFYDGJB2LPZUFPXUEW3"
+HORIZON_URL="https://horizon.domain.com"
+ACCOUNTS=[
+"GD5DJQDDBKGAYNEAXU562HYGOOSYAEOO6AS53PZXBOZGCP5M2OPGMZV3",
+"GAENZLGHJGJRCMX5VCHOLHQXU3EMCU5XWDNU4BGGJFNLI2EL354IVBK7",
+"GAOO3LWBC4XF6VWRP5ESJ6IBHAISVJMSBTALHOQM2EZG7Q477UWA6L7U",
+"GADS43KNEAZ55Z5RQ6SK4WZRQS7QSMWIXBGFV4CPR4HM6XDU73F5NY53",
+"GB6EPXP7NWRDGZLMSBJR2DJONCPS5K3CGLW26A536OJXGBA4TAMRP2DE",
+"GCK7T7OSZU5IYWKXO7HDKYQYSQMGSVZ3YEI5VQ3VZ5QQP3F2UUP2I4N3"
+]
 VERSION="2.0.0"
 
 [DOCUMENTATION]
 ORG_NAME= "VOLC xyz"
 ORG_URL= "https://volc.xyz"
 ORG_LOGO= "https://raw.githubusercontent.com/volcxyz/volcxyz.github.io/main/assets/volc.png"
+ORG_PHYSICAL_ADDRESS= "Singapore"
 ORG_DESCRIPTION= "Volcanic Trading Group"
 ORG_KEYBASE= "volcxyz"
 ORG_TWITTER= "volcxyz"
