--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -8,6 +8,7 @@ ACCOUNTS=[
 "GD5DJQDDBKGAYNEAXU562HYGOOSYAEOO6AS53PZXBOZGCP5M2OPGMZV3",
 "GAENZLGHJGJRCMX5VCHOLHQXU3EMCU5XWDNU4BGGJFNLI2EL354IVBK7",
 "GAOO3LWBC4XF6VWRP5ESJ6IBHAISVJMSBTALHOQM2EZG7Q477UWA6L7U",
+"GCRQBRNVSTACQ6O45YOVGV2QXXS565IB23XJV4V674IG6BGIBXMQCAZD" ,
 "GADS43KNEAZ55Z5RQ6SK4WZRQS7QSMWIXBGFV4CPR4HM6XDU73F5NY53",
 "GB6EPXP7NWRDGZLMSBJR2DJONCPS5K3CGLW26A536OJXGBA4TAMRP2DE",
 "GCK7T7OSZU5IYWKXO7HDKYQYSQMGSVZ3YEI5VQ3VZ5QQP3F2UUP2I4N3"
@@ -26,8 +27,8 @@ ORG_GITHUB= "volcxyz"
 ORG_OFFICIAL_EMAIL= "volcxyz@sent.com"
 
 [[CURRENCIES]]
-code= "VOLC"
-name= "VOLC Coin"
+code= "VOLCANO"
+name= "VOLCANO Coin"
 issuer= "GCRQBRNVSTACQ6O45YOVGV2QXXS565IB23XJV4V674IG6BGIBXMQCAZD"
 is_asset_anchored = false
 display_decimals= 7
